--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,13 @@ a:hover {
 a:active {
   color: blue;
 }
-a:visited {
-  color: gray;
-}
 .avatar {
   width: 200px;
   border-radius: 20px;
   box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+}
+.avatar:hover {
+  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.5);
 }
 .info {
   display: flex;
@@ -41,14 +41,12 @@ a:visited {
   margin-bottom: 10px;
 }
 .info p {
+  display: inline-block;
   color: #86898f;
   margin: 0;
   font-style: italic;
   font-weight: bold;
-  text-decoration: none;
-  /* text-transform: uppercase; */
-  /* letter-spacing: 5px; */
-  /* word-spacing: 30px; */
+  word-spacing: 5px;
 }
 /* Box Model */
 .container {
@@ -56,26 +54,11 @@ a:visited {
   max-width: 750px;
   margin: auto;
 }
-/* .social {
-    background: green;
-    padding: 15px;
-    border: 5px solid red;
-    margin: 20px;
-  } */
-/* .box-model > div {
-    float: left;
-    background: #000;
-    height: 200px;
-    width: 25%;
-  } */
 .bg-yellow {
   background: #fff9dc;
 }
 .bg-green {
   background: #5effe7;
-}
-.bg-red {
-  background: #ffe5e5;
 }
 .card {
   padding: 15px 20px;
@@ -101,15 +84,6 @@ a:visited {
 .table td:nth-child(2),
 .table td:nth-child(3) {
   color: #86898f;
-}
-.link-list {
-  list-style: none;
-  padding: 0px;
-}
-.link-list li {
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #ccc;
 }
 .contact h2 {
   text-align: center;
@@ -152,15 +126,4 @@ a:visited {
 }
 .btn:hover {
   opacity: 0.8;
-}
-/* Position */
-.position {
-  border: 4px solid black;
-  margin-top: 40px;
-  padding: 20px;
-}
-.box {
-  width: 50px;
-  height: 50px;
-  background: lightcoral;
 }
